src/static/scss/components/_opinion-card.scss
.opinion-card {
  position: relative;

  display: flex;
  flex-direction: column;

  max-width: 22rem;

  @include bp-mediumup {
    width: 55rem;
    max-width: 55rem;
  }

  &.-active {
    & ~ .-active {
      display: none;
    }
  }

  &.-inactive {
    display: none;
  }

  & > .card {
    overflow-x: hidden;
    overflow-y: auto;

    margin-top: auto;

    transition: transform .7s $swift-out, opacity .4s ease;
    transform: translate(0);
    animation: activate-card .4s $swift-out;

    opacity: 1;

    @include card-darkbg-shadow();
    @include bp-mediumup {
      display: flex;
      overflow-x: unset;
      overflow-y: unset;
    }

    @at-root .-reject#{&} {
      transform: rotate(-10deg);
      transform-origin: 100% 200%;

      opacity: 0;

      @include bp-mediumup {
        transform-origin: 100% 300%;
      }
    }

    @at-root .-approve#{&} {
      transform: rotate(10deg);
      transform-origin: 0 200%;

      opacity: 0;

      @include bp-mediumup {
        transform-origin: 0 300%;
      }
    }

    @at-root .-neutral#{&} {
      transform: translateY(30%);

      opacity: 0;
    }

    @at-root .-next#{&} {
      transform: translateX(calc(-50vw - 17rem));

      @include bp-mediumup {
        transform: translateX(calc(-50vw - 33.5rem));
      }
    }

    & > .suggestion {
      word-break: break-word;
    }

    & > header {
      position: fixed;
      z-index: 2;
      top: 0;
      left: 0;

      display: flex;
      justify-content: space-between;

      box-sizing: border-box;
      width: 100%;
      padding: 1rem;

      background-color: #FFF;

      @include bp-mediumup {
        padding: 2rem;

        background-color: transparent;
      }
    }

    & > .highlight,
    & > .opinion {
      display: flex;
      overflow: hidden;
      flex: 1 0 50%;

      box-sizing: border-box;

      text-align: left;

      & > .overflow {
        width: 100%;
        padding: 1rem;

        @include bp-mediumup {
          overflow-x: hidden;
          overflow-y: auto;
          overflow-y: overlay;

          padding: 0 2rem;
          padding-bottom: 4rem;
        }
      }
    }

    & > .highlight {
      padding-top: 4.5rem;

      background-color: #FFF;

      @include bp-mediumup {
        padding-top: 6rem;
      }

      & > .overflow > .excerpt {
        position: relative;
        z-index: 1;

        color: $color-gray;

        & > .text-highlight {
          position: unset;

          background-color: $color-highlight-on-white;

          @include bp-mediumup {
            position: relative;
          }

          &::before {
            position: absolute;
            z-index: -1;

            width: 3px;
            height: calc(100% + 1rem);

            content: '';

            background-color: $color-highlight-on-white;

            @include bp-mediumup {
              width: 27.5rem;
              height: 5px;
            }
          }
        }
      }
    }

    & > .opinion {
      padding-bottom: .5rem;

      background-color: $color-highlight-on-white;

      @include bp-mediumup {
        padding-top: 6rem;
        padding-bottom: 0;
      }
    }

    & > .info-text {
      justify-content: flex-start;
    }
  }

  & > .actions {
    display: flex;
    align-items: center;
    flex: 0 0 auto;
    justify-content: flex-start;

    width: 100%;
    margin-top: 1rem;
    margin-bottom: auto;

    @include bp-mediumup {
      justify-content: center;

      margin-top: 2rem;
    }
    
    & > .disagree {
      @extend .app-button;
      @extend .app-button.-red;
      @extend .app-button.-circle;
      @extend .app-button.-circle.-toleft;

      @include icon('disagree');
    }

    & > .indifferent {
      @extend .app-button;
      @extend .app-button.-gray;
      @extend .app-button.-circle;

      margin: 0 1rem;

      @include bp-mediumup {
        margin: 0 3rem;
      }
      @include icon('indifferent');
    }

    & > .agree {
      @extend .app-button;
      @extend .app-button.-green;
      @extend .app-button.-circle;
      @extend .app-button.-circle.-toright;

      @include icon('agree');
    }

    & > .skip {
      @extend .app-button;
      @extend .app-button.-white;
      @extend .app-button.-circle;
      @extend .app-button.-circle.-toleft;
      @extend .app-button.-circle.-small;

      position: absolute;
      right: 0;

      @include icon('skip');
    }
  }
}

